chore: remove postinstall script

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "build:dev": "NODE_ENV=development npx tsx src/bundler",
     "build": "npx tsx src/bundler",
     "patch": "npx patch-package @duckdb/duckdb-wasm --exclude='nothing'",
-    "postinstall": "patch-package",
+    "postinstall:local": "patch-package",
     "prepublishOnly": "npm run build",
     "pretest:deno": "npm run build:dev",
     "pretest:node": "npm run build:dev",
